# Mantella-Adding-NPCs-Back-History-NG

./: CMakeLists.txt  README.md  vcpkg-configuration.json
src/: plugin.cpp
